welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:11: error: not found: value estSurbiscuit
	while(!estSurOrange && !estSurbiscuit)
                                ^RunHalf:16: error: not found: value estSurorange
	if (estSurorange())
            ^