welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
}

var biscuit:Int = 0;
var caseOrange:Int = 0;

while(2 * biscuit != caseOrange + 1)
{
	avance();
	while(!estSurOrange && !estSurbiscuit)
	{
		avance();
	}

	if (estSurorange())
	{
		caseOrange = caseOrange + 1;
	}
	else
	{
		biscuit = biscuit + 1;
	}
}
